--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -51,6 +51,7 @@ jobs:
 
       - name: Get new coverage
         run: |
+          echo "TEMPP"
           reportt="${{ core.summary }}"
           echo "REPPPOOORRTTT: $report"
           report_summary="${{ env.REPORT_SUMMARY }}"
