--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -51,9 +51,6 @@ jobs:
 
       - name: Get new coverage
         run: |
-          echo "TEMPP"
-          reportt="${{ steps.summary }}"
-          echo "REPPPOOORRTTT: $report"
           report_summary="${{ env.REPORT_SUMMARY }}"
           echo "TIMEPASS PRINT"
           new_coverage=$(echo "$report_summary" | grep -oP '(?<=Total Coverage<\/b><\/td><td><b><img src=https:\/\/img\.shields\.io\/badge\/)\d+\.\d+(?=%25-green\.svg>)')
@@ -68,25 +65,25 @@ jobs:
           echo "old and new coverage"
           echo "$old_coverage"
           echo "$new_coverage"
-          # if [ "$old_coverage" != "$new_coverage" ]; then
-          #   echo "COVERAGE_CHANGED=true" >> $GITHUB_ENV
-          #   color=""
-          #   if (( $(echo "$new_coverage < 35.00" | bc -l) )); then
-          #     color="red"
-          #   else
-          #     color="green"
-          #   fi
-          #   sed -i "s/coverage-.*.svg)/coverage-$new_coverage\%25-$color.svg)/" README.md
-          # fi
+          if [ "$old_coverage" != "$new_coverage" ]; then
+            echo "COVERAGE_CHANGED=true" >> $GITHUB_ENV
+            color=""
+            if (( $(echo "$new_coverage < 35.00" | bc -l) )); then
+              color="red"
+            else
+              color="green"
+            fi
+            sed -i "s/coverage-.*.svg)/coverage-$new_coverage\%25-$color.svg)/" README.md
+          fi
 
-#      - name: Create, Approve and Merge PR
-#        if: env.COVERAGE_CHANGED == 'true'
-#        uses: ./.github/actions/create_approve_and_merge_pr_to_update_readme
-#        with:
-#          title: 'Update JaCoCo badge in README.md'
-#          commit-message: ${{ env.COMMIT_MESSAGE }}
-#          create-pr-app-id: ${{ secrets.AUTO_CREATE_ID }}
-#          create-pr-app-private-key: ${{ secrets.AUTO_CREATE_PRIVATE_KEY }}
-#          approve-pr-app-id: ${{ secrets.AUTO_APPROVE_ID }}
-#          approve-pr-app-private-key: ${{ secrets.AUTO_APPROVE_PRIVATE_KEY }}
-#          github-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create, Approve and Merge PR
+        if: env.COVERAGE_CHANGED == 'true'
+        uses: ./.github/actions/create_approve_and_merge_pr_to_update_readme
+        with:
+          title: 'Update JaCoCo badge in README.md'
+          commit-message: ${{ env.COMMIT_MESSAGE }}
+          create-pr-app-id: ${{ secrets.AUTO_CREATE_ID }}
+          create-pr-app-private-key: ${{ secrets.AUTO_CREATE_PRIVATE_KEY }}
+          approve-pr-app-id: ${{ secrets.AUTO_APPROVE_ID }}
+          approve-pr-app-private-key: ${{ secrets.AUTO_APPROVE_PRIVATE_KEY }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
