--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -82,8 +82,8 @@ jobs:
         with:
           title: 'Update JaCoCo badge in README.md'
           commit-message: ${{ env.COMMIT_MESSAGE }}
-          create-pr-app-id: ${{ secrets.AUTO_CREATE_ID }}
-          create-pr-app-private-key: ${{ secrets.AUTO_CREATE_PRIVATE_KEY }}
-          approve-pr-app-id: ${{ secrets.AUTO_APPROVE_ID }}
-          approve-pr-app-private-key: ${{ secrets.AUTO_APPROVE_PRIVATE_KEY }}
+          create-pr-app-id: ${{ secrets.APP_ID }}
+          create-pr-app-private-key: ${{ secrets.APP_PRIVATE_KEY }}
+          approve-pr-app-id: ${{ secrets.ALTERNATE_APP_ID }}
+          approve-pr-app-private-key: ${{ secrets.ALTERNATE_APP_PRIVATE_KEY }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
