--- a/.licenserc.json
+++ b/.licenserc.json
@@ -1,3 +1,6 @@
 {
-  "**/*.java": "// Copyright 2019 Foo. All rights reserved. MIT license."
+  "**/*.java": "// Copyright 2019 Foo. All rights reserved. MIT license.",
+  "ignore": [
+    "main/"
+  ]
 }
