--- a/.licenserc.json
+++ b/.licenserc.json
@@ -1,4 +1,5 @@
 {
   "**/*.java": "// Copyright 2019 Foo. All rights reserved. MIT license.",
-  "**/*.yml": "// Copyright 2019 Foo. All rights reserved. MIT license."
+  "**/*.yml": "// Copyright 2019 Foo. All rights reserved. MIT license.",
+  "**/*.gradle": "// Copyright 2019 Foo. All rights reserved. MIT license."
 }
