--- a/.licenserc.json
+++ b/.licenserc.json
@@ -1,5 +1,5 @@
 {
-  "**/*.java": "/*\n * Copyright 2019 Foo. All rights reserved. MIT license.\n * Test",
-  "**/*.yml": "#  Copyright 2019 Foo. All rights reserved. MIT license.\n #  Test",
+  "**/*.java": "/* Copyright 2019 Foo. All rights reserved. MIT license.\n * Test",
+  "**/*.yml": "#  Copyright 2019 Foo. All rights reserved. MIT license.\n#  Test",
   "**/*.gradle": "// Copyright 2019 Foo. All rights reserved. MIT license."
 }
