--- a/.github/workflows/check_secrets.yml
+++ b/.github/workflows/check_secrets.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: Set env as secret
         env:
-          MY_VAL: ${{ secrets.ALTERNATE_APP_ID }}
+          MY_VAL: ${{ secrets.TEMP_SECRET }}
         run: |
           import os
           print("PRINTTTTT")
