--- a/.github/workflows/spandan.yml
+++ b/.github/workflows/spandan.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'gradle.properties'
 
 env:
   COMMIT_MESSAGE: |
@@ -15,7 +17,6 @@ env:
 
 jobs:
   update-badge:
-    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     permissions:
       contents: write
