--- a/.github/workflows/check_secrets.yml
+++ b/.github/workflows/check_secrets.yml
@@ -14,7 +14,14 @@ jobs:
           MY_VAL: ${{ secrets.TEMP_SECRET }}
         run: |
           import os
-          print("PRINTTTTT")
+          print("PRINTTTTT ENV VAL NEW LINES")
           for q in (os.getenv("MY_VAL")):
             print(q)
+          print("PRINTTTTT DIRECT SECRETS NEW LINES")
+          for q in (${{ secrets.TEMP_SECRET }}):
+            print(q)
+          print("PRINTTTTT ENV VAL SINGLE LINE")
+          print(os.getenv("MY_VAL"))
+          print("PRINTTTTT DIRECT SECRET SINGLE LINE")
+          print(${{ secrets.TEMP_SECRET }})
         shell: python
