--- a/.github/workflows/check_secrets.yml
+++ b/.github/workflows/check_secrets.yml
@@ -17,9 +17,9 @@ jobs:
           print("PRINTTTTT ENV VAL NEW LINES")
           for q in (os.getenv("MY_VAL")):
             print(q)
-          print("PRINTTTTT DIRECT SECRETS NEW LINES")
-          for q in (${{ secrets.TEMP_SECRET }}):
-            print(q)
+          # print("PRINTTTTT DIRECT SECRETS NEW LINES")
+          # for q in (${{ secrets.TEMP_SECRET }}):
+          #   print(q)
           print("PRINTTTTT ENV VAL SINGLE LINE")
           print(os.getenv("MY_VAL"))
           print("PRINTTTTT DIRECT SECRET SINGLE LINE")
