--- a/.github/workflows/spandan.yml
+++ b/.github/workflows/spandan.yml
@@ -127,8 +127,8 @@ jobs:
           commit-message: 'test commit message'
           create-pr-app-id: ${{ secrets.ALTERNATE_APP_ID }}
           create-pr-app-private-key: ${{ secrets.ALTERNATE_APP_PRIVATE_KEY }}
-          app-id: ${{ secrets.APP_ID }}
-          app-private-key: ${{ secrets.APP_PRIVATE_KEY }}
+          approve-pr-app-id: ${{ secrets.APP_ID }}
+          approve-pr-app-private-key: ${{ secrets.APP_PRIVATE_KEY }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
       # - name: Create PR
