--- a/.github/workflows/check_secrets.yml
+++ b/.github/workflows/check_secrets.yml
@@ -11,17 +11,17 @@ jobs:
     steps:
       - name: Set env as secret
         env:
-          MY_VAL: ${{ secrets.TEMP_SECRET }}
+          TEMP_SECRET: ${{ secrets.TEMP_SECRET }}
         run: |
           import os
           print("PRINTTTTT ENV VAL NEW LINES")
-          for q in (os.getenv("MY_VAL")):
+          for q in (os.getenv("TEMP_SECRET")):
             print(q)
           # print("PRINTTTTT DIRECT SECRETS NEW LINES")
           # for q in (${{ secrets.TEMP_SECRET }}):
           #   print(q)
           print("PRINTTTTT ENV VAL SINGLE LINE")
-          print(os.getenv("MY_VAL"))
+          print(os.getenv("TEMP_SECRET"))
           print("PRINTTTTT DIRECT SECRET SINGLE LINE")
           print(${{ secrets.TEMP_SECRET }})
         shell: python
