--- a/.github/workflows/check_secrets.yml
+++ b/.github/workflows/check_secrets.yml
@@ -11,17 +11,9 @@ jobs:
     steps:
       - name: Set env as secret
         env:
-          TEMP_SECRET: ${{ secrets.TEMP_SECRET }}
+          TEMP: ${{ secrets.TEMP }}
         run: |
           import os
-          print("PRINTTTTT ENV VAL NEW LINES")
-          for q in (os.getenv("TEMP_SECRET")):
+          for q in (os.getenv("TEMP")):
             print(q)
-          # print("PRINTTTTT DIRECT SECRETS NEW LINES")
-          # for q in (${{ secrets.TEMP_SECRET }}):
-          #   print(q)
-          print("PRINTTTTT ENV VAL SINGLE LINE")
-          print(os.getenv("TEMP_SECRET"))
-          print("PRINTTTTT DIRECT SECRET SINGLE LINE")
-          print(${{ secrets.TEMP_SECRET }})
         shell: python
