--- a/.github/workflows/check_secrets.yml
+++ b/.github/workflows/check_secrets.yml
@@ -11,9 +11,9 @@ jobs:
     steps:
       - name: Set env as secret
         env:
-          TEMP: ${{ secrets.TEMP }}
+          TEST: ${{ secrets.TEST }}
         run: |
           import os
-          for q in (os.getenv("TEMP")):
+          for q in (os.getenv("TEST")):
             print(q)
         shell: python
