--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -22,6 +22,14 @@ jobs:
         run: |
           content=`cat .licenserc.json`
           echo "content: $content"
+          
+          # Extract specific key-value pairs using jq
+          key1_value=$(echo "$content" | jq -r '.**/*.java')
+          key2_value=$(echo "$content" | jq -r '.**/*.yml')
+          
+          # Print the extracted values
+          echo "Key1 value: $key1_value"
+          echo "Key2 value: $key2_value"
 
       # - name: find graph
       #   run: |
