--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -24,8 +24,8 @@ jobs:
           echo "content: $content"
           
           # Extract specific key-value pairs using jq
-          key1_value=$(echo "$content" | jq -r '.[**/*.java]')
-          key2_value=$(echo "$content" | jq -r '.[**/*.yml]')
+          key1_value=$(echo "$content" | jq -r '."**/*.java"')
+          key2_value=$(echo "$content" | jq -r '."**/*.yml"')
           
           # Print the extracted values
           echo "Key1 value: $key1_value"
