--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -31,9 +31,10 @@ jobs:
           echo "Key1 value: $key1_value"
           echo "Key2 value: $key2_value"
 
-      # - name: find graph
-      #   run: |
-      #     find . -type f -and -path '*/plot.png'
+      - name: find certificate
+        run: |
+          find . -type f -name '*.java' -exec grep -q $key1_value {} \; -print
+          find . -type f -name '*.yml' -exec grep -q $key2_value {} \; -print
 
         
       # - name: upload artifact
