--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -33,9 +33,9 @@ jobs:
           echo "Key2 value: $key2_value"
 
           find . -type f -name '*.java'
-          find . -type f -name '*.java' -exec grep -q $key1_value {} \; -print
+          find . -type f -name '*.java' -exec grep -q "$key1_value" {} \; -print
           find . -type f -name '*.yml'
-          find . -type f -name '*.yml' -exec grep -q $key2_value {} \; -print
+          find . -type f -name '*.yml' -exec grep -q "$key2_value" {} \; -print
 
       # - name: find certificate
       #   run: |
