--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -40,9 +40,9 @@ jobs:
       # - name: find certificate
       #   run: |
       #     find . -type f -name '*.java'
-      #     find . -type f -name '*.java' -exec grep -q $key1_value {} \; -print
+      #     find . -type f -name '*.java' -exec grep -F -q $key1_value {} \; -print
       #     find . -type f -name '*.yml'
-      #     find . -type f -name '*.yml' -exec grep -q $key2_value {} \; -print
+      #     find . -type f -name '*.yml' -exec grep -F -q $key2_value {} \; -print
 
         
       # - name: upload artifact
