--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -32,12 +32,12 @@ jobs:
           echo "Key1 value: $key1_value"
           echo "Key2 value: $key2_value"
 
-          # # find . -type f -name '*.java'
-          # find . -type f -name '*.java' -exec grep -q "$key1_value" {} \; -print
-          # # find . -type f -name '*.yml'
-          # find . -type f -name '*.yml' -exec grep -q "$key2_value" {} \; -print
+          # find . -type f -name '*.java'
+          find . -type f -name '*.java' -exec grep -F -q $key1_value {} \; -print
+          # find . -type f -name '*.yml'
+          find . -type f -name '*.yml' -exec grep -F -q $key2_value {} \; -print
 
-          find . -type f -name '*.yml' -exec sh -c 'if grep -qF "$key2_value" "$1"; then echo "❌ $1"; else echo "✅ $1"; fi' _ {} \;
+          # find . -type f -name '*.yml' -exec sh -c 'if grep -qF "$key2_value" "$1"; then echo "❌ $1"; else echo "✅ $1"; fi' _ {} \;
 
 
 
