--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -36,7 +36,20 @@ jobs:
           find . -type f -name '*.java' -exec grep -F -q "$key1_value" {} \; -print
           # find . -type f -name '*.yml'
           # find . -type f -name '*.yml' -exec grep -qF "$key2_value" {} \; -exec echo "✅ {}" \; -o -exec echo "❌ {}" \;
-          find . -type f -name '*.yml' -exec grep -qF "$key2_value" {} \; -printf "✅ %p\n" -o -printf "❌ %p\n"
+          # find . -type f -name '*.yml' -exec grep -qF "$key2_value" {} \; -printf "✅ %p\n" -o -printf "❌ %p\n"
+
+          # Store the list of .yml files in a variable
+          yml_files=$(find . -type f -name '*.yml')
+
+          # Iterate over each .yml file and check for the presence of key2_value
+          for file in $yml_files; do
+            if grep -qF "$key2_value" "$file"; then
+              echo "✅ $file"
+            else
+              echo "❌ $file"
+            fi
+          done
+      - shell: bash
 
 
 
