--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -49,25 +49,4 @@ jobs:
               echo "❌ $file"
             fi
           done
-      - shell: bash
-
-
-
-
-          # find . -type f -name '*.yml' -exec sh -c 'if grep -qF "$key2_value" "$1"; then echo "❌ $1"; else echo "✅ $1"; fi' _ {} \;
-
-
-
-      # - name: find certificate
-      #   run: |
-      #     find . -type f -name '*.java'
-      #     find . -type f -name '*.java' -exec grep -F -q $key1_value {} \; -print
-      #     find . -type f -name '*.yml'
-      #     find . -type f -name '*.yml' -exec grep -F -q $key2_value {} \; -print
-
-        
-      # - name: upload artifact
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: upload graph
-      #     path: ./.github/scripts/plot.png
+        shell: bash
