--- a/.github/workflows/emulator.yml
+++ b/.github/workflows/emulator.yml
@@ -1,7 +1,12 @@
 name: Launch emulator
 
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - main
+  pull_requests:
+    branches:
+      - '*'
 
 jobs:
   launch_emulator:
