--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -21,19 +21,26 @@ jobs:
 
       - name: get json
         run: |
-          content=`cat .licenserc.json`
+          content=$(cat .licenserc.json)
           echo "content: $content"
           
           # Extract specific key-value pairs using jq
           key1_value=$(echo "$content" | jq -r '."**/*.java"')
           key2_value=$(echo "$content" | jq -r '."**/*.yml"')
+
+          jq -r 'to_entries[] | "\(.key) \(.value)"' <<< "$content" | while read -r key value; do
+            # Use the key and value as needed
+            echo "Key: $key"
+            echo "Value: $value"
+            # Perform your actions here using the key and value
+          done
           
           # Print the extracted values
           echo "Key1 value: $key1_value"
           echo "Key2 value: $key2_value"
 
           # find . -type f -name '*.java'
-          find . -type f -name '*.java' -exec grep -F -q "$key1_value" {} \; -print
+          # find . -type f -name '*.java' -exec grep -F -q "$key1_value" {} \; -print
           # find . -type f -name '*.yml'
           # find . -type f -name '*.yml' -exec grep -qF "$key2_value" {} \; -exec echo "✅ {}" \; -o -exec echo "❌ {}" \;
           # find . -type f -name '*.yml' -exec grep -qF "$key2_value" {} \; -printf "✅ %p\n" -o -printf "❌ %p\n"
