--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -38,19 +38,9 @@ jobs:
           echo "Key1 value: $key1_value"
           echo "Key2 value: $key2_value"
 
-          # find . -type f -name '*.java'
-          # find . -type f -name '*.java' -exec grep -F -q "$key1_value" {} \; -print
-          # find . -type f -name '*.yml'
-          # find . -type f -name '*.yml' -exec grep -qF "$key2_value" {} \; -exec echo "✅ {}" \; -o -exec echo "❌ {}" \;
-          # find . -type f -name '*.yml' -exec grep -qF "$key2_value" {} \; -printf "✅ %p\n" -o -printf "❌ %p\n"
-
-          # Store the list of .yml files in a variable
-          java_files=$(find . -type f -name '*.java')
-          yml_files=$(find . -type f -name '*.yml')
-
           # Iterate over each .yml file and check for the presence of key2_value
           for key in $keys; do
-            files=$(find . -type f -name '$key')
+            files=$(find . -type f -name $key)
             echo "files: $files"
             value=$(echo "$content" | jq -r '."$key"')
             echo "value: $value"
