--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -39,11 +39,26 @@ jobs:
           echo "Key2 value: $key2_value"
 
           # Iterate over each .yml file and check for the presence of key2_value
+          # for key in $keys; do
+          #   echo "key: $key"
+          #   files=$(find . -type f -name $key)
+          #   echo "files: $files"
+          #   value=$(echo "$content" | jq -r '."$key"')
+          #   echo "value: $value"
+          #   for file in $files; do
+          #     if grep -qF "$value" "$file"; then
+          #       echo "$file ✅"
+          #     else
+          #       echo "$file ❌"
+          #     fi
+          #   done
+          # done
+
           for key in $keys; do
             echo "key: $key"
-            files=$(find . -type f -name $key)
+            files=$(find . -type f -name "$key")
             echo "files: $files"
-            value=$(echo "$content" | jq -r '."$key"')
+            value=$(echo "$content" | jq -r ".$key")
             echo "value: $value"
             for file in $files; do
               if grep -qF "$value" "$file"; then
