--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -38,9 +38,9 @@ jobs:
           # Print the extracted keys
           echo "Keys: $keys"
 
-          # find . -type f -name '*.java'
+          find . -type f -name '**/*.java'
           # find . -type f -name '*.java' -exec grep -F -q "$key1_value" {} \; -print
-          # find . -type f -name '*.yml'
+          find . -type f -name '**/*.yml'
           # find . -type f -name '*.yml' -exec grep -qF "$key2_value" {} \; -exec echo "✅ {}" \; -o -exec echo "❌ {}" \;
           # find . -type f -name '*.yml' -exec grep -qF "$key2_value" {} \; -printf "✅ %p\n" -o -printf "❌ %p\n"
 
