--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -51,7 +51,7 @@ jobs:
             files=$(find . -type f -name '$key')
             echo "files: $files"
             echo "getKey: '."$key"' "
-            value=$(echo "$content" | jq -r '."$key"')
+            value=$(echo "$content" | jq -r '."**/*.java"')
             echo "value: $value"
             for file in $files; do
               if grep -qF "$value" "$file"; then
