--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -48,12 +48,10 @@ jobs:
           # Iterate over each .yml file and check for the presence of key2_value
           for key in $keys; do
             echo "key: $key"
-            files=$(find . -type f -name "$key")
+            files=$(find . -type f -name '*.yml')
             echo "files: $files"
             echo "getKey: '."$key"' "
-            escaped_key=$(sed 's/[*]/\\*/g' <<< "$key")  # Escape wildcard characters
-            echo "escaped key: $escaped_key"
-            value=$(echo "$content" | jq -r --arg file_pattern "$escaped_key" ".$escaped_key")
+            value=$(echo "$content" | jq -r '."**/*.yml"')
             echo "value: $value"
             for file in $files; do
               if grep -qF "$value" "$file"; then
