--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -34,10 +34,25 @@ jobs:
           echo "Key2 value: $key2_value"
           
           # Extract keys from the JSON object
-          keys=$(jq -r 'keys | .[]' <<< "$content")
+          # keys=$(jq -r 'keys | .[]' <<< "$content")
 
-          # Print the extracted keys
-          echo "Keys: $keys"
+          # Read the JSON content
+
+          # Initialize an empty array to store the keys
+          keys=()
+
+          # Extract keys from the JSON object and append them to the array
+          while IFS= read -r key; do
+            keys+=("$key")
+          done < <(jq -r 'keys | .[]' <<< "$content")
+
+          # Print the keys
+          printf '%s\n' "${keys[@]}"
+
+          for key in "${keys[@]}"; do
+            echo "Key: $key"
+            # Perform actions using the key
+          done
 
           find . -type f -name '*.java'
           # find . -type f -name '*.java' -exec grep -F -q "$key1_value" {} \; -print
