--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -54,11 +54,11 @@ jobs:
             # Perform actions using the key
           done
 
-          find . -type f -name '*.java'
-          # find . -type f -name '*.java' -exec grep -F -q "$key1_value" {} \; -print
-          find . -type f -name '*.yml'
-          # find . -type f -name '*.yml' -exec grep -qF "$key2_value" {} \; -exec echo "✅ {}" \; -o -exec echo "❌ {}" \;
-          # find . -type f -name '*.yml' -exec grep -qF "$key2_value" {} \; -printf "✅ %p\n" -o -printf "❌ %p\n"
+          # find . -type f -name '*.java'
+          # # find . -type f -name '*.java' -exec grep -F -q "$key1_value" {} \; -print
+          # find . -type f -name '*.yml'
+          # # find . -type f -name '*.yml' -exec grep -qF "$key2_value" {} \; -exec echo "✅ {}" \; -o -exec echo "❌ {}" \;
+          # # find . -type f -name '*.yml' -exec grep -qF "$key2_value" {} \; -printf "✅ %p\n" -o -printf "❌ %p\n"
 
           # Iterate over each .yml file and check for the presence of key2_value
           for key in "${keys[@]}"; do
