--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -66,7 +66,7 @@ jobs:
             files=$(find . -type f -name "$key")
             echo "files: $files"
             echo "getKey: '."$key"' "
-            value=$(echo "$content" | jq -r ''."$key"')
+            value=$(echo "$content" | jq -r --arg key "$key" '.[$key]')
             echo "value: $value"
             for file in $files; do
               if grep -qF "$value" "$file"; then
